勋章根据分数大小排序 (#301)
* 勋章根据分数大小排序

* 增加单元测试

* 增加单元测试到工作流

* 解决处理字符串问题

---------

Co-authored-by: 奇葩の灵梦 <cutereimu@vip.qq.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
+      - name: Execute Gradle test
+        env:
+          GRADLE_OPTS: '-Xmx4g'
+        run: ./gradlew test
+
       - name: Execute Gradle build
         env:
           GRADLE_OPTS: '-Xmx4g'
